# monte-carlo-diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/source/: api.md  conf.py  index.md  mcdnet.md  ula.md
notebooks/: mixture-1d.ipynb
src/ais/: sampler.py  sde.py  utils.py
src/ais/nn/: __init__.py  control_net.py  positional_encoding.py
src/mcd/: __init__.py  sampler.py
src/mcd/nn/: __init__.py  init.py
